--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
@@ -109,55 +109,53 @@
     <!-- ======= inscrire Section ======= -->
     <section id="inscrire" class="about">
       <div class="container">
-      	<h2>Inscrivez vous ici</h2>
+        <h2>Inscrivez vous ici</h2>
         </div>
         <div class="col-md-6 form-group">
-	        <form action="#" method="post" role="form" class="php-email-form">
-	              <div class="form-row">
-	                <div class="col-md-6 form-group">
-	                  <input type="text" name="name" class="form-control" id="name" placeholder="Votre Nom"/>
-	                  <div class="validate"></div>
-	                </div>
-	                <div class="col-md-6 form-group">
-	                  <input type="date" class="form-control" name="date" id="date" placeholder="Date Naissance"/>
-	                  <div class="validate"></div>
-	                </div>
-	              </div>
+          <form action="inscription.php" method="post">
+                <div class="form-row">
+                  <div class="col-md-6 form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Votre Nom" required />
+                    <div class="validate"></div>
+                  </div>
 
-	              <div class="form-group">
-	                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"/>
-	                <div class="validate"></div>
-	              </div>
+                  <!-- <div class="col-md-6 form-group">
+                    <input type="date" class="form-control" name="date" id="date" placeholder="Date Naissance" required />
+                    <div class="validate"></div>
+                  </div> -->
+                </div>
+                <div class="form-row">
+                <div class="col-md-6 form-group">
+                 <input type="text" class="form-control" name="CNI" id="CNI" placeholder="CNI" required />
+                  <div class="validate"></div>
+              </div>
 
-	              <div class="form-group">
-	               <input type="text" class="form-control" name="CNI" id="CNI" placeholder="CNI"/>
-	                <div class="validate"></div>
-	            	</div>
+                  <div class="col-md-6 form-group">
+                 <input type="text" class="form-control" name="ville" id="ville" placeholder="ville" required />
+                  <div class="validate"></div>
+                  </div>
+                </div>
 
-	                <div class="form-group">
-	               <input type="text" class="form-control" name="ville" id="ville" placeholder="ville"/>
-	                <div class="validate"></div>
-	                </div>
+                <div class="form-row">
+                  <div class="col-md-6 form-group">
+                  <input type="text" class="form-control" name="numero" id="numero" placeholder="Numero" required />
+                  <div class="validate"></div>
+                  </div>
 
-	                <div class="form-group">
-	               	<input type="text" class="form-control" name="Numero" id="Numero" placeholder="Numero" />
-	                <div class="validate"></div>
-	                </div>
+                  <div class="col-md-6 form-group">
+                  <input type="password" class="form-control" name="password" id="password" placeholder="Mot de passe" required />
+                  <div class="validate"></div>
+                  </div>
+                </div>
+                  <div class="form-group">
+                 <input type="password" class="form-control" name="password2" id="Confirmation" placeholder="Confirmation" required />
+                  <div class="validate"></div>
 
-	                <div class="form-group">
-	               	<input type="password" class="form-control" name="password" id="password" placeholder="Mot de passe"/>
-	                <div class="validate"></div>
-	                </div>
+                </div>
+                
+                <input type="submit" name="forminscription" value="Enregistrer"></input>
 
-	                <div class="form-group">
-	               <input type="password" class="form-control" name="Confirmation" id="Confirmation" placeholder="Confirmation"/>
-	                <div class="validate"></div>
-
-	              </div>
-	              
-	              <div class="text-center" ><button type="submit">Enregistrer</button></div>
-
-	            </form>
+              </form>
 
       </div>
     </section><!-- End inscrire Section -->
@@ -531,12 +529,12 @@
 
         </div>
 
-        <div class="row" data-aos="fade-up">
+        <!-- <div class="row" data-aos="fade-up">
 
           <div class="col-lg-6 ">
             <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
-          </div>
-
+          </div> -->
+<!-- 
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
@@ -564,9 +562,9 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div>
+          </div> -->
 
-        </div>
+        <!-- </div> -->
 
       </div>
     </section><!-- End Contact Section -->
